syntax = "proto3";

package kubecaptain.apis.api.v1.app;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "kubecaptain/apis/api/v1/app/ci;ci";

service AppCIService {
  rpc Get (GetRequest) returns (AppCIConfig) {
    option (google.api.http) = {
      get: "/v1/app/{name}/ci"
    };
  }
  rpc Apply (ApplyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/app/{name}/ci"
      body: "config"
    };
  }
}

message AppCIConfig {
  string git_url = 1 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {uri: true, max_len: 512}
  ];
  string dockerfile = 2 [
    (google.api.field_behavior) = REQUIRED
  ];

  google.protobuf.Timestamp created_at = 100 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];
}

message GetRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {pattern: "^[a-z]([a-z0-9-]*[a-z0-9])?$", max_len:64}
  ];
}

message ApplyRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {pattern: "^[a-z]([a-z0-9-]*[a-z0-9])?$", max_len:64}
  ];
  AppCIConfig config = 2 [
    (google.api.field_behavior) = REQUIRED
  ];
}